--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,9 @@ html {
     color: whitesmoke;
     position: relative;
     top: 40px;
+    padding: 50px;
 }
+
 #About {
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
